--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,7 @@
 @import "base";
 @import "layout";
 @import "modules/first-news";
+@import "modules/more-read";
+@import "modules/pub";
+@import "modules/best-edit";
+@import "modules/suisse";
