--- a/src/scss/modules/_first-news.scss
+++ b/src/scss/modules/_first-news.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
+  background-color: #222222;
 }
 
 .analyse {
@@ -18,5 +19,5 @@
 }
 
 .live-section {
-  margin: 77px 30px -17px 0;
+  margin: 77px 30px 0px 0;
 }
