auteur et date avec titre

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,3 +5,7 @@
 @import "modules/pub";
 @import "modules/best-edit";
 @import "modules/suisse";
+@import "modules/sport";
+@import "modules/divertissement";
+@import "modules/blogs";
+@import "modules/DateAuteur";
