--- a/src/scss/modules/_DateAuteur.scss
+++ b/src/scss/modules/_DateAuteur.scss
@@ -319,3 +319,209 @@
   align-items: center;
   color: #f5f2f2;
 }
+.descriptionG {
+  position: absolute;
+  width: 487px;
+  height: 77px;
+  left: 15px;
+  bottom: 53px;
+
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 25px;
+  line-height: 30px;
+
+  display: flex;
+  align-items: center;
+
+  color: #ffffff;
+}
+.auteurG {
+  position: absolute;
+  width: 177px;
+  height: 31px;
+  left: 15px;
+  bottom: 25px;
+
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 12px;
+  line-height: 30px;
+
+  display: flex;
+  align-items: center;
+
+  color: #f5f2f2;
+}
+.dateG {
+  position: absolute;
+  width: 119px;
+  height: 30px;
+  left: 15px;
+  bottom: 8px;
+
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 12px;
+  line-height: 30px;
+
+  display: flex;
+  align-items: center;
+
+  color: #f5f2f2;
+}
+.descriptionH {
+  position: absolute;
+  width: 1071px;
+  height: 297px;
+  left: 30px;
+  bottom: 140px;
+
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 50px;
+  line-height: 62px;
+  display: flex;
+  align-items: center;
+  color: #ffffff;
+}
+.auteurH {
+  position: absolute;
+  width: 291px;
+  height: 63px;
+  left: 30px;
+  bottom: 40px;
+
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 62px;
+  display: flex;
+  align-items: center;
+  color: #e0dcdc;
+}
+.dateH {
+  position: absolute;
+  width: 174px;
+  height: 63px;
+  left: 30px;
+  bottom: 10px;
+
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 62px;
+  display: flex;
+  align-items: center;
+  color: #e0dcdc;
+}
+.descriptionI {
+  position: absolute;
+  width: 487px;
+  height: 77px;
+  left: 20px;
+  bottom: 50px;
+
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 25px;
+  line-height: 30px;
+  display: flex;
+  align-items: center;
+
+  color: #ffffff;
+}
+.auteurI {
+  position: absolute;
+  width: 177px;
+  height: 31px;
+  left: 22px;
+  bottom: 20px;
+
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 12px;
+  line-height: 30px;
+  display: flex;
+  align-items: center;
+
+  color: #f5f2f2;
+}
+.dateI {
+  position: absolute;
+  width: 119px;
+  height: 30px;
+  left: 22px;
+  bottom: 1px;
+
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 12px;
+  line-height: 30px;
+
+  display: flex;
+  align-items: center;
+
+  color: #f5f2f2;
+}
+.descriptionJ {
+  position: absolute;
+  width: 487px;
+  height: 77px;
+  left: 20px;
+  bottom: 120px;
+
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 25px;
+  line-height: 30px;
+  display: flex;
+  align-items: center;
+
+  color: #ffffff;
+}
+.auteurJ {
+  position: absolute;
+  width: 177px;
+  height: 31px;
+  left: 22px;
+  bottom: 20px;
+
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 12px;
+  line-height: 30px;
+  display: flex;
+  align-items: center;
+
+  color: #f5f2f2;
+}
+.dateJ {
+  position: absolute;
+  width: 119px;
+  height: 30px;
+  left: 22px;
+  bottom: 1px;
+
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 12px;
+  line-height: 30px;
+
+  display: flex;
+  align-items: center;
+
+  color: #f5f2f2;
+}
